# api-client

./: .gitignore  README.md  pyproject.toml
packaging/: apiclient.spec
src/apiclient/: __init__.py  __main__.py  app.py
src/apiclient/http/: auth.py  body.py  curl.py  executor.py  oauth.py  response_format.py  status.py  url_builder.py
src/apiclient/models/: __init__.py  compat.py  project.py  request.py
src/apiclient/storage/: project_storage.py
src/apiclient/ui/: app_session.py  body_editor.py  json_syntax_highlighter.py  key_value_table.py  main_window.py  request_editor.py  response_viewer.py  save_request_dialog.py  sidebar.py  workers.py
tests/: test_app_session.py  test_auth.py  test_body_curl.py  test_compat.py  test_http.py  test_oauth.py  test_path_params.py  test_response_format.py  test_save_request_dialog.py  test_status.py  test_storage.py  test_url_builder.py
