[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-client"
version = "0.1.0"
description = "A lean cross-platform desktop app for exploring and testing APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6-essentials>=6.6",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6",
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
api-client = "apiclient.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
